<resources>
    <string name="app_name">Find My Track [BETA]</string>
    <string-array name="busCompanyarrayMap">
        <item>Select Company</item>
        <item>Cattracks</item>
        <item>Merced TheBus</item>
    </string-array>
    <string-array name="busCompanyarray">
        <item>Cattracks</item>
        <item>Merced TheBus</item>
    </string-array>

    <string-array name="AMPM">
        <item>AM</item>
        <item>PM</item>
    </string-array>

    <string-array name="CattracksIDarrayMap">
        <item>Select Route</item>
        <item>AB</item>
        <item>C1Blue</item>
        <item>C1Gold</item>
        <item>C2</item>
        <item>FastCat</item>
        <item>NiteCat</item>
        <item>E</item>
        <item>E1</item>
        <item>E2</item>
        <item>G</item>
        <item>HeritageWeek</item>
        <item>HeritageWeekend</item>
    </string-array>

    <string-array name="CattracksIDarray">
        <item>AB</item>
        <item>C1Blue</item>
        <item>C1Gold</item>
        <item>C2</item>
        <item>FastCat</item>
        <item>NiteCat</item>
        <item>E</item>
        <item>E1</item>
        <item>E2</item>
        <item>G</item>
        <item>HeritageWeek</item>
        <item>HeritageWeekend</item>
    </string-array>

    <string-array name="MercedTheBusIDarrayMap">
        <item>Select Route</item>
        <item>UCNorth</item>
        <item>UCSouth</item>
    </string-array>

    <string-array name="MercedTheBusIDarray">
        <item>UCNorth</item>
        <item>UCSouth</item>
    </string-array>

    <string-array name="MileRanges">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
    </string-array>

    <string-array name="RepeatArray">
        <item>None</item>
        <item>Weekly</item>
        <item>Bi-Weekly</item>
        <item>Monthly</item>
    </string-array>

    <string-array name="hours">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="minutes">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>

    <string-array name="emptySpinner"></string-array>
    <string name="title_activity_logged_in_main_menu">LoggedInMainMenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="title_map">Map</string>
    <string name="title_stops">Stops</string>
    <string name="title_user_schedule">My Schedule</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_logged_in_schedule">LoggedInScheduleActivity</string>
    <string name="select_type_of_stop">Select Type of Stop</string>
    <string name="search_stops">Search Bus Stops</string>
    <string name="custom_stops">Add Custom Stop</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_logged_in_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="my_schedule">My Schedule</string>
    <string name="map">Map</string>
    <string name="stops">Stops</string>
    <string name="home">Home</string>
    <string name="draw_marker_options_title">Villages Apts. "M" Street</string>
    <string name="draw_marker_options_snippet">Bus Company: CatTracks\nBus ID:C2, E, E2 \n\nBus Company: TheBus \nBus ID: L, M3, UC, W2</string>
    <string name="search_in_map">Search</string>
    <string name="user_location_permission_not_granted">Error: User Location Not Granted</string>

    <string name="schedule_notification_title_template">Schedule: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="schedule_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="title_activity_view_custom_schedule_stops">ViewCustomScheduleStops</string>
</resources>
