<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vancu.findmytrackalpha1.LoggedInMainMenuActivity">

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/title_home"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <Button
        android:id="@+id/userSchedule"
        android:layout_width="101dp"
        android:layout_height="42dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="460dp"
        android:onClick="bLoggedInViewSchedule"
        android:text="@string/my_schedule"
        android:textSize="10sp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="56dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="425dp"
        android:onClick="bLoggedInViewMaps"
        android:text="@string/map"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message" />

    <Button
        android:id="@+id/button6"
        android:layout_width="66dp"
        android:layout_height="39dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="460dp"
        android:onClick="bLoggedInViewStops"
        android:text="@string/stops"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintStart_toEndOf="@+id/userSchedule"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="72dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="460dp"
        android:onClick="bLoggedInViewSettings"
        android:text="Settings"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="157dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="287dp"
        android:onClick="bLoggedInSearchStops"
        android:text="Search Stops"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="153dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="18dp"
        android:onClick="bLoggedInCustomStops"
        android:text="Custom Stops"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

</android.support.constraint.ConstraintLayout>
